[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/Soldado de Jetpack.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_00.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_01.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_02.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_03.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_04.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_05.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_06.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_07.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_08.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_09.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_10.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_11.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_12.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_13.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_14.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Inimigos_Fecart/Soldado - V2/sprite_15.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 66.8672
height = 100.07

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 31.8212, 31.388 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 31.9906, 32.0186 )

[node name="Soldado de Jetpack" type="Node2D"]

position = Vector2( 312.656, 501.504 )
scale = Vector2( 0.65, 0.65 )
z_index = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_group_": true
}
vel = 375
limite = -100

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )
animation = "default"
frame = 3
playing = true
flip_h = true

[node name="Area2D" type="Area2D" parent="." index="1"]

editor/display_folded = true
scale = Vector2( 0.75, 0.75 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 12.5611, 0 )
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="." index="2"]

editor/display_folded = true
position = Vector2( 14.7967, 444.049 )
scale = Vector2( 0.451351, 11.58 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2" index="0"]

position = Vector2( 0, -0.0240095 )
scale = Vector2( 1, 1.01901 )
shape = SubResource( 3 )

[node name="Area2D3" type="Area2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 14.7811, -468.016 )
scale = Vector2( 0.462379, 12.2737 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3" index="0"]

shape = SubResource( 4 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]

[connection signal="body_entered" from="Area2D3" to="." method="_on_Area2D3_body_entered"]


